# simplify_polyline

./: .pdm.toml  .pre-commit-config.yaml  README.md  pyproject.toml  pyproject_pdm  tox.ini
simplify_polyline/: __init__.py  helpers.py  simplifiers.py  type_hints.py
tests/: conftest.py  test_lineseg_dist.py  test_vs.py
